@@ -10,6 +10,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - [security] Fixed possible code injection incase session variables are compromised, see PMASA-2011-6
 - [security] Fixed regexp quoting issue in Synchronize code, see PMASA-2011-7
 - [security] Fixed filtering of a file path, which allowed for directory traversal, see PMASA-2011-8
+- [security] Fixed possible session manipulation in swekey authentication, see PMASA-2011-12
 
 3.3.10.1 (2011-05-20)
 - [security] XSS on Tracking page
